<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one22"
        android:layout_width="83dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/clear_click"
        android:onClick="buttonClear"
        android:text="@string/clear"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one20"
        android:layout_width="108dp"
        android:layout_height="73dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="269dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonMultiply"
        android:text="@string/multiply"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one19"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonSign"
        android:text="@string/sign"
        android:textColor="@color/light_grey"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one18"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonDot"
        android:text="@string/dot"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one17"
        android:layout_width="108dp"
        android:layout_height="73dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonDivide"
        android:text="@string/divide"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one21"
        android:layout_width="294dp"
        android:layout_height="145dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/equal_click"
        android:onClick="buttonEqual"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one16"
        android:layout_width="108dp"
        android:layout_height="73dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="357dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonMinus"
        android:text="@string/minus"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one15"
        android:layout_width="108dp"
        android:layout_height="73dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonPlus"
        android:text="@string/plus"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one13"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="267dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonNine"
        android:text="@string/nine"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one12"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="267dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonEight"
        android:text="@string/eight"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one14"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonZero"
        android:text="@string/zero"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one11"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="267dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonSeven"
        android:text="@string/seven"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one10"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="357dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonSix"
        android:text="@string/six"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one9"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="357dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonFive"
        android:text="@string/five"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one8"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonThree"
        android:text="@string/three"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one7"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="357dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonFour"
        android:text="@string/four"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one6"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonTwo"
        android:text="@string/two"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/labelka"
        android:layout_width="395dp"
        android:layout_height="158dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="562dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one"
        android:layout_width="83dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/normal_buttons_click"
        android:onClick="buttonOne"
        android:text="@string/one"
        android:textColor="@color/light_grey"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>